--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.0",
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.3",
